--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<link href="style.css" rel="stylesheet" type="text/css">
+		<script>
+			function affficheVille(){
+				alert(VilleChoisie);}
+			let villeCourante= "Niort"
+		</script>
 	</head>
 	<header>
 	<div id="bandeau">
