--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<script>
 			function affficheVille(){
-				alert(VilleChoisie);}
+				console.log(VilleChoisie);}
 			let villeCourante= "Niort"
 		</script>
 	</head>
